2013-10-08  Tom Tromey  <tromey@redhat.com>

	* gdb.dwarf2/dwzbuildid.exp: New file.
	* lib/dwarf.exp (Dwarf::_section): Add "flags" and "type"
	parameters.
	(Dwarf::_defer_output): Change "section" parameter to
	"section_spec"; update.
	(Dwarf::gnu_debugaltlink, Dwarf::_note, Dwarf::build_id): New
	procs.

2013-10-08  Joel Brobecker  <brobecker@adacore.com>

	* gdb.ada/mi_catch_ex.exp: Make "mi_execute_to" test names unique.

2013-10-07  Tom Tromey  <tromey@redhat.com>

	* lib/mi-support.exp (varobj_tree::walk_tree): Set _root_idx
	to 0.

2013-10-06  Sergio Durigan Junior  <sergiodj@redhat.com>

	* gdb.base/corefile.exp: Test whether $_exitsignal is set and
	$_exitcode is void when opening a corefile.
	* gdb.base/exitsignal.exp: New file.
	* gdb.base/segv.c: Likewise.
	* gdb.base/normal.c: Likewise.

2013-10-04  Joel Brobecker  <brobecker@adacore.com>

	* gdb.mi/mi-start.c, gdb.mi/mi-start.exp: New files.

2013-10-02  Vidya Praveen  <vidyapraveen@arm.com>

	* gdb.trace/entry-values.exp: Modify regular expression to scan for
	'bl' instruction instead of 'call' for ARM and AArch64 targets.

2013-10-02  Pedro Alves  <palves@redhat.com>

	* gdb.dwarf2/dw2-reg-undefined.exp <pattern_rax_rbx_rcx_print,
	pattern_rax_rbx_rcx_info>: Set to "<not saved>".
	* gdb.mi/mi-reg-undefined.exp (opt_out_pattern): Delete.
	(not_saved_pattern): New.
	Replace use of the former with the latter.

2013-10-02  Pedro Alves  <palves@redhat.com>

	* README (Board Settings): Document "exit_is_reliable".
	* lib/gdb.exp (gdb_continue_to_end): Check whether the board says
	running to exit reliably reports program exits.
	* boards/native-gdbserver.exp: Set exit_is_reliable in the board
	info.
	* boards/native-stdio-gdbserver.exp: Likewise.

2013-10-01  Doug Evans  <dje@google.com>

	* gdb.python/python.exp: Remove redundant print-stack tests.
	Make all print-stack test names unique.  Fix spelling of print-stack.

2013-09-29  Yao Qi  <yao@codesourcery.com>
